--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -6,35 +6,26 @@
 
     <footer class="footer">
 
-        <ul class="social-icon">
+        <ul class="social-icon-list">
 
-            <li class="social-icon__item">
-                <a class="social-icon__link" href="#">
-                    <img src="{% static 'img/facebook.png' %}" alt="facebook-icon">
+            <li class="social-icon-item">
+                <a class="social-icon-link" href="#">
+                    <img src="{% static 'img/facebook.svg' %}" alt="facebook icone">
                 </a>
             </li>
 
-            <li class="social-icon__item">
-                <a class="social-icon__link" href="#">
-                    <img src="{% static 'img/x.png' %}" alt="x-icon">
+            <li class="social-icon-item">
+                <a class="social-icon-link" href="#">
+                    <img src="{% static 'img/x.svg' %}" alt="x icone">
                 </a>
             </li>
 
-            <li class="social-icon__item">
-                <a class="social-icon__link" href="#">
-                    <img src="{% static 'img/instagram.png' %}" alt="instagram-icon">
+            <li class="social-icon-item">
+                <a class="social-icon-link" href="#">
+                    <img src="{% static 'img/instagram.svg' %}" alt="instagram icone">
                 </a>
             </li>
             
-        </ul>
-        
-        <ul class="menu">
-          <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
-          <li class="menu__item"><a class="menu__link" href="#">About</a></li>
-          <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
-          <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
-          <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
-    
         </ul>
 
         <p>&copy;2024 Nelson Felipe</p>
