--- a/static/css/event-detail.css
+++ b/static/css/event-detail.css
@@ -1,26 +1,42 @@
 @import 'styles.css';
 
-main {
+/* estilização do titulo */
+.title-container {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    padding: 30px 0;
+    color: #042535;
+}
+
+.title-container h1 {
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.main-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 70vh;
 }
 
 /* Container principal */
-.container {
+.container-event {
     display: flex;
-    border-radius: 15px;
     overflow: hidden;
-    width: 1200px;
-    height: 600px;
+    max-width: 900px;
+    width: 100%;
+    height: 500px;
+    border-radius: 15px;
     box-shadow: 0 4px 8px 4px rgba(0, 0, 0, 0.24);
 }
 
 /* Container da imagem */
 .image-container {
-    background-color: #555;
-    width: 65%;
+    background-color: #032230;
+    width: 100%;
     height: auto;
 }
 
@@ -36,35 +52,34 @@ main {
     flex-direction: column;
     justify-content: space-between;
     width: 35%;
-    padding: 20px;
-
-
+    padding: 15px 15px 15px 15px;
 }
 
 .details h1 {
-    font-size: 28px;
-    margin-bottom: 20px;
+    font-size: 25px;
+    margin-bottom: 10px;
     color: #333;
 }
 
 .details p {
     font-size: 20px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
-.details .date,
-.details .price {
+.infos {
+    overflow: auto;
+    height: 85%;
+}
+
+.date,
+.price {
     font-weight: bold;
-    font-size: 22px;
-    margin-bottom: 20px;
+    font-size: 13px;
+    margin-bottom: 10px;
 }
 
-.details .location,
-.details .time,
-.details .city,
-.details .slots,
-.details .type {
-    font-size: 20px;
+.field-info {
+    font-size: 14px;
     color: #555;
 }
 
@@ -75,40 +90,93 @@ main {
 /* Botões */
 .buttons {
     display: flex;
+    align-items: center;
     justify-content: end;
-    margin-top: 20px;
+    height: 10%;
+    gap: 10px;
+
 }
 
 .btn {
-    border: none;
-    border-radius: 8px;
-    padding: 10px 20px;
-    font-size: 18px;
-    cursor: pointer;
-    margin-right: 10px;
     display: flex;
     align-items: center;
-    gap: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    background-color: #032230;
+    transition: background-color 0.3s ease;
+
 }
 
-.btn i {
-    font-size: 20px;
-}
-
-.btn.edit {
-    background-color: #3498db;
+.btn-edit {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: #fff;
 }
 
-.btn.edit:hover {
-    background-color: #2980b9;
+.btn-edit:hover {
+    background-color: #0DA183;
 }
 
-.btn.delete {
-    background-color: #e74c3c;
+.edit-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+}
+
+.btn-edit img {
+    width: 30px;
+    height: 30px;
+
+}
+
+.btn-delete {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: #fff;
 }
 
-.btn.delete:hover {
-    background-color: #c0392b;
+.btn-delete img {
+    width: 30px;
+    height: 30px;
+
+}
+
+.btn-delete:hover {
+    background-color: #0DA183;
+}
+
+@media only screen and (max-width: 911px) {
+    .container-event {
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        width: 50%;
+        height: auto;
+    }
+
+    .image-container {
+        background-color: #032230;
+        width: 100%;
+        height: 30%;
+
+    }
+
+    .image-container img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+    .details {
+
+        width: 100%;
+        padding: 15px 15px 15px 15px;
+    }
 }
