--- a/static/css/event_list.css
+++ b/static/css/event_list.css
@@ -1,42 +1,51 @@
 @import 'styles.css';
 
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.list-header {
+/* estilização do titulo */
+.title-container {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin: 30px 0;
+    padding: 30px 0;
+    color: #042535;
+}
+
+.title-container h1 {
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.main-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
 }
 
 .event-list {
     display: grid;
     justify-content: space-evenly;
-    grid-template-columns: repeat(auto-fill, 340px);
+    grid-template-columns: repeat(auto-fill, 350px);
     width: 100%;
     max-width: 1200px;
     column-gap: 3rem;
     row-gap: 4rem;
-    margin-bottom: 6rem;
+
     list-style-type: none;
 }
 
+/* estilizações do card e conteúdo do card */
 .card {
     display: flex;
     align-items: center;
     justify-content: center;
+    max-width: 350px;
+    width: 100%;
 }
 
 .content-card {
     overflow: hidden;
     position: relative;
-    font-family: Arial, Helvetica, sans-serif;
     width: 350px;
     height: 220px;
     border-radius: 12px;
@@ -50,29 +59,23 @@ main {
 }
 
 .content-card img {
+    object-fit: cover;
     width: 100%;
     height: 100%;
-    object-fit: cover;
 }
 
 .content-card .infos {
-    box-sizing: border-box;
     position: absolute;
     width: 100%;
-    padding: 30px 20px 20px 20px;
     height: auto;
+    padding: 30px 20px 20px 20px;
     bottom: 0;
-    background: linear-gradient(transparent, rgba(0, 0, 0, 0.6));
-}
-
-.content-card .date,
-.content-card .title {
-    margin: 0;
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.76));
 }
 
 .content-card .date {
     font-size: 12px;
-    color: rgba(255, 255, 255, 0.9);
+    color: rgb(255, 255, 255);
     margin-bottom: 4px;
 }
 
@@ -80,3 +83,5 @@ main {
     font-size: 17px;
     color: #fff;
 }
+
+/* fim da estilização do card */
