--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,6 +1,5 @@
 @import 'styles.css';
 
-
 .footer {
     display: flex;
     justify-content: center;
@@ -10,63 +9,34 @@
     width: 100%;
     min-height: 100px;
     padding: 30px;
-
+    margin-top: 6rem;
 }
 
-.social-icon {
+.social-icon-list {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    list-style-type: none;
     width: 10rem;
     margin: 10px 0;
 }
 
-
-
-.social-icon__item {
+.social-icon-item {
     display: flex;
     align-items: center;
     justify-content: center;
 
 }
 
-
-.social-icon__item,
-.menu__item {
-    list-style: none;
-}
-
-.social-icon__link {
+.social-icon-link {
     display: inline-block;
 }
 
-.social-icon__link img {
+.social-icon-link img {
+    width: 45px;
     display: block;
 }
 
-
-
-.menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.menu__link {
-    font-size: 1.2rem;
-    color: #fff;
-    margin: 0 10px;
-    display: inline-block;
-    transition: 0.5s;
-    text-decoration: none;
-    opacity: 0.75;
-    font-weight: 300;
-}
-
-.menu__link:hover {
-    opacity: 1;
-}
 
 .footer p {
     color: #fff;
