--- a/static/css/header.css
+++ b/static/css/header.css
@@ -18,6 +18,24 @@ header {
     height: 100%;
 }
 
+.header-logo-place {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25%;
+    height: 100%;
+}
+
+.header-logo-place img {
+    width: 70px;
+    height: 70px;
+}
+
+.empty-div {
+    width: 25%;
+    height: 100%;
+}
+
 .header-nav-list {
     display: flex;
     align-items: center;
@@ -37,6 +55,7 @@ header {
     justify-content: center;
     width: 33%;
     height: 100%;
+    transition: background-color 0.4s ease;
 }
 
 .header-nav-list li:hover {
