--- a/templates/about.html
+++ b/templates/about.html
@@ -8,14 +8,32 @@
 
 {% block content %}
 
-    <div class="container">
-        <img src="{% static "img/logo.svg" %}" alt="Imagem do Projeto" class="project-image">
+    <div class="container-about">
+        
+        <img src="{% static "img/logo.svg" %}" alt="logo do projeto" class="logo-image">
+        <div class="sub-imgs">
 
+            <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target='blank'>
+                <img src="{% static "img/html.svg" %}" alt="logo do HTML" class="tek-img">
+            </a>
+            
+            <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="blank">
+                <img src="{% static "img/css.svg" %}" alt="logo do CSS" class="tek-img">
+            </a>
+            
+            <a href="https://www.djangoproject.com/" target="blank">
+                <img src="{% static "img/django.svg" %}" alt="logo do Django" class="tek-img">
+            </a>
+
+        </div>
         <hr>
 
         <p class="description">
-            Este site se trata de um sistema desenvolvido com Django, HTML e CSS. 
-            É um projeto para a cadeira de Programação Web ministrada pelo professor Italo Linhares.
+
+            ItaManager é um sistema desenvolvido para a disciplina de Programação Web, 
+            ministrada pelo professor Ítalo Linhares na Universidade Federal do Ceará, campus
+             de Itapajé. É essencialmente desenvolvido com as tecnologias HTML5, CSS3 e Django. 
+            
         </p>
     </div>
 {% endblock content %}
