--- a/templates/event_edit.html
+++ b/templates/event_edit.html
@@ -2,32 +2,54 @@
 {% load static %}
 
 {% block meta %}
-    <title>Lista de eventos</title>
+    
     <link rel="stylesheet" href="{% static 'css/event-edit.css' %}">
-{% endblock meta %}
-
-{% block content %}
-
-    <h1>
+    <script src="{% static 'js/event-edit.js' %}" defer></script>
+    <title>
         {% if form.instance.pk %}
             Editar
         {% else %}
             Criar
         {% endif %} 
             Evento
-    </h1>
+    </title>
 
-    <div class="edit-event-container">
+{% endblock meta %}
 
+{% block content %}
+
+    <div class="title-container">
+        <h1>
+            {% if form.instance.pk %}
+                Editar
+            {% else %}
+                Criar
+            {% endif %} 
+                Evento
+        </h1>
+    </div>
+    
+    <div class="main-container">
         <form method="post" enctype="multipart/form-data" class="edit-event-form">
 
             {% csrf_token %}
-
-            <div class="input-img">
-                <label for="{{ form.image.id_for_label }}">{{ form.image.label }}</label>
+    
+            <div class="container-img">
+                <label for="{{ form.image.id_for_label }}">
+                    {% if form.instance.pk %}
+                        {% if form.instance.image %}
+                            <img src="{{ form.instance.image.url }}" alt="Imagem default" id="img-event">
+                        {% else %}
+                            <img src="{% static 'img/event-default.png' %}" alt="article-cover" />
+                        {% endif %}
+                        
+                    {% else %}
+                        <img src="{% static 'img/camera2.svg' %}" alt="Imagem default" id="img-event">
+                    {% endif %} 
+                </label>
                 {{ form.image }}
             </div> 
-
+    
             {% for field in form %}
                 
                 {% if field.name != "image" %}
@@ -39,12 +61,12 @@
                 
             {% endfor %}
             
-            <div class="form-btns">
+            <div class="form-btn">
                 <button type="submit" class="btn btn-save">Salvar</button>
             </div>
-
+    
         </form>
-
     </div>
+    
 
 {% endblock content %}
